<resources>
    <string name="app_name">Chat Multi Media</string>
    <string name="action_settings">Settings</string>
    <string name="action_leave">Leave</string>

    <string name="action_send">Send</string>
    <string name="action_send_emo">Send Emo</string>
    <string name="prompt_message">Message</string>
    <string name="error_connect">CAN\'T CONNECT TO SERVER</string>
    
    <!-- Messages-->
    <!--<string name="message_welcome">Welcome to Chat Room - Hovansu</string>-->
    <plurals name="message_participants">
        <item quantity="one">There\'s %d participant</item>
        <item quantity="other">There are %d participants</item>
    </plurals>
    <string name="message_user_joined">%s JOINED</string>
    <string name="message_user_left">%s LEFT</string>
    <string name="user_action_typing">is typing</string>
    <string name="title_activity_login">Join</string>
    <string name="action_attach">Image</string>
    <string name="action_camera">Camera</string>
    <string name="action_record">Record</string>

    <!-- Strings related to login-->
    <string name="prompt_username">What\'s your nickname?</string>
    <string name="action_sign_in">Join</string>
    <string name="action_sign_in_short">Join</string>
    <string name="error_field_required">This field is required</string>
    <string name="action_pause_record">Pause</string>
    <string name="action_send_record">Send</string>
    <string name="emoji_happy">Happy</string>
    <string name="emoji_sad">Sad</string>
    <string name="emoji_angry">Angry</string>
    <string name="icon_chat">IconChat</string>
    <string name="designer">HoVanSu - 12T4</string>

    <dimen name="spacing">8dp</dimen>
    <dimen name="radius">8dp</dimen>
    <dimen name="border_line">1dp</dimen>
</resources>
